# TeamFightTacticsAnalysis

./: README.md  requirements.txt  setup.cfg  setup.py
jupyter/: TFT_Analysis.ipynb
src/tft/common/: __init__.py  common.py
src/tft/database/cdragon/: models.py
src/tft/riot_api/: constant.py  riot_api.py  transform_metadata.py
