[metadata]
name = tft
version = 0.0.1.dev1
description = TFT API for analysis game
long_description = file: README.md
long_description_content_type = text/markdown
author = hyunho kim
author_email = kgg6008@gmail.com
classifiers =
    Programming Language :: Python :: 3.8

[options]
package_dir =
    = src
packages = find:
python_requires = >=3.8.0,<3.9.0
include_package_data = True
install_requires =
    requests
    flask_appbuilder
    SQLAlchemy
    pytz
zip_safe = False

[options.packages.find]
where = src

[build-system]
requires = ["setuptools", "wheel"]